<resources>
    <string name="app_name">quizapp</string>
    <string name="quiz_app_title">Quiz App!</string>
    <string name="welcome_txt">Welcome</string>
    <string name="enter_name">Please enter your name</string>
    <string name="name_example">John Doe</string>
    <string name="start_txt">Start</string>
    <string name="name_txt">Name</string>
    <string name="question_image_description">Question image</string>
    <string name="next_question">Next Question</string>
</resources>